# tariff-service

./: .gitignore  DATA_SOURCES.md  README.md  VERSIONING.md  handler.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.kiro/steering/: pre-commit-rules.md
app/: config.py  database.py  main.py
app/models/: tariff.py
app/routers/: calculate.py  dnsps.py  docs.py  tariffs.py
app/schemas/: tariff.py
app/services/: rate_calculator.py  tariff_service.py
data/: tariffs.db
infra/: template.yaml
seed/: ausgrid.json  ausnet.json  build_db.py  endeavour.json  energex.json  essential.json  evoenergy.json  jemena.json  powerwater.json  sapn.json
tests/: conftest.py  test_api.py
