[project]
name = "oec-tariff-service"
dynamic = ["version"]
description = "Public REST API serving curated Australian DNSP tariff data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andre Zitelli", email = "andre.zitelli@outlook.com"},
]
dependencies = [
    "fastapi==0.115.12",
    "mangum==0.19.0",
    "sqlalchemy==2.0.41",
    "pydantic==2.11.4",
    "uvicorn==0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "httpx==0.28.1",
    "ruff==0.11.13",
    "pyright==1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
